--- a/new/style.css
+++ b/new/style.css
@@ -1,4 +1,5 @@
-body {
+
+.poem {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     left: 0;
     line-height: 20px;
